Project

General

Profile

Actions

Bug #14338

closed

IO#write without args seems wrong

Bug #14338: IO#write without args seems wrong

Added by normalperson (Eric Wong) about 8 years ago. Updated about 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:84703]

Description

"ruby -e STDOUT.write" outputs "#<IO:0x583a2de0>" (without quotes)

"ruby -rstringio -e 'p StringIO.new.write'" shows zero bytes written

The following restores <= 2.4 behavior for IO#write, but other things (StringIO,
OpenSSL, ...) need to be modified, too:

diff --git a/io.c b/io.c
index eeaf0c021c..0d95d12a9b 100644
--- a/io.c
+++ b/io.c
@@ -1675,7 +1675,10 @@ io_writev(int argc, VALUE *argv, VALUE io)
 static VALUE
 io_write_m(int argc, VALUE *argv, VALUE io)
 {
-    if (argc > 1) {
+    if (argc <= 0) {
+	rb_error_arity(argc, 1, UNLIMITED_ARGUMENTS);
+    }
+    else if (argc > 1) {
 	return io_writev(argc, argv, io);
     }
     else {

Opinions? Should we raise or just return 0 when no args are given?

Updated by nobu (Nobuyoshi Nakada) about 8 years ago Actions #1 [ruby-core:86285]

  • Description updated (diff)

normalperson (Eric Wong) wrote:

Opinions? Should we raise or just return 0 when no args are given?

I vote for the latter.

Updated by Anonymous about 8 years ago Actions #2

  • Status changed from Open to Closed

Applied in changeset trunk|r62967.


io.c: IO#write without args returns 0

This is consistent with other implementations of .write
in openssl and stringio.

Actions

Also available in: PDF Atom